<resources>
    <string name="app_name">Student Attendance</string>

    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set image. Please try again!</string>
    <string name="lbl_set_profile_photo">Select Image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Permission</string>
    <string name="dialog_permission_message">You need to granted permission</string>
    <string name="go_to_settings">Go to setting</string>
    <string name="action_settings">Setting</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="select_your_area">Select Your Area</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="share">Share</string>
    <string name="other">Other</string>
    <string name="shop">Shop</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="advance_search">Advance Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="post_details">Post Details</string>
    <string name="post_title">Post Title</string>
    <string name="view_all_category">View All Category</string>
    <string name="government_officers">Government Officers</string>
    <string name="latest">Latest</string>
    <string name="view_all">View All</string>
    <string name="select_your_category">Select Your Category</string>
    <string name="upload_your_post_image">Upload Your Post Image</string>
    <string name="heading_title">Heading/Title</string>
    <string name="contact_number">Contact Number</string>
    <string name="submit">Submit</string>
    <string name="add_post">Add Post</string>
    <string name="ambulance_service">Ambulance Service</string>
    <string name="sai_ambulance_service_moradabad">Sai Ambulance Service Moradabad</string>
    <string name="moradabad">Moradabad</string>
    <string name="price_on_call">Price On Call</string>
    <string name="loading">Please wait...</string>
    <string name="txt_no_record_found">No Record Found</string>
    <string name="user_profile">User Profile</string>
    <string name="cancel">Cancel</string>
    <string name="update_post">Update Post</string>
    <string name="txt_post_details">Post Details</string>
    <string name="txt_update_post">Update Post</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_gallery">Gallery</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="post_type">Post Type</string>
    <string name="video_url_optional">Video Url (Optional)</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_pending">Pending</string>
    <string name="your_all_post">Your All Post</string>
    <string name="txt_approvedd">Approved</string>
</resources>
