<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/padding_4sp"
    app:cardUseCompatPadding="true"
    app:cardElevation="3sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/student_image"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/sky"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txt_student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ambulance_service"
            android:padding="@dimen/padding_4sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/padding_4sp"
            android:fontFamily="@font/proximanovaregular"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_toRightOf="@+id/student_image"
            android:layout_marginStart="@dimen/padding_8dp"
            android:layout_toEndOf="@+id/student_image" />
        <TextView
            android:id="@+id/txt_student_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sai_ambulance_service_moradabad"
            android:padding="@dimen/padding_4sp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:fontFamily="@font/proximanovaregular"
            android:layout_below="@+id/txt_student_name"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_toRightOf="@+id/student_image"
            android:layout_marginStart="@dimen/padding_8dp"
            android:layout_toEndOf="@+id/student_image" />


        <TextView
            android:id="@+id/txt_roll_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_on_call"
            android:padding="@dimen/padding_4sp"
            android:layout_marginTop="@dimen/padding_8dp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/proximanovaregular"
            android:layout_below="@+id/txt_student_class"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_toRightOf="@+id/student_image"
            android:layout_marginStart="@dimen/padding_8dp"
            android:layout_toEndOf="@+id/student_image" />

        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_delete"
            android:paddingTop="@dimen/padding_4sp"
            android:paddingBottom="@dimen/padding_4sp"
            android:paddingLeft="16dp"
            android:visibility="gone"
            android:paddingRight="16dp"
            android:layout_marginTop="@dimen/padding_8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:layout_marginRight="@dimen/padding_8dp"
            android:background="@drawable/orange_border"
            android:fontFamily="@font/proximanovaregular"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txt_student_class"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/padding_8dp" />


    </RelativeLayout>



</androidx.cardview.widget.CardView>