<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.student_attandence.AddStudent">
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_arrow_back"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/update_post"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:focusableInTouchMode="false"
                android:background="@drawable/et_background"
                android:ems="10"
                android:fontFamily="@font/notosans"
                android:hint="@string/select_your_category"
                android:padding="16dp"
                android:textColor="@color/black"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:cardElevation="@dimen/padding_4sp"
                app:cardCornerRadius="14dp"
                app:cardUseCompatPadding="true">
                <ImageView
                    android:id="@+id/post_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/colorAccent"
                    android:contentDescription="@string/app_name" />

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_8dp"
                    android:layout_centerVertical="true"
                    android:text="@string/upload_your_post_image"
                    android:paddingStart="@dimen/padding_8dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/ic_file_upload"
                    android:tint="@color/white"
                    android:layout_margin="@dimen/padding_4sp"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>


            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/et_background"
                android:ems="10"
                android:fontFamily="@font/notosans"
                android:hint="@string/heading_title"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/et_background"
                android:ems="10"
                android:fontFamily="@font/notosans"
                android:hint="@string/contact_number"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/et_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="textStart"
                android:background="@drawable/et_background"
                android:maxLines="50"
                android:fontFamily="@font/notosans"
                android:hint="@string/txt_post_details"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textColor="@color/black"
                android:gravity="start" />
            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4sp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent">

                <Button
                    android:id="@+id/btn_save_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/notosans"
                    android:text="@string/txt_update_post"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>





</RelativeLayout>