<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/padding_4sp"
    app:cardUseCompatPadding="true"
    app:cardElevation="2sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_4sp">
        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@mipmap/edit_post"
            android:padding="@dimen/padding_4sp"
            android:tint="@color/colorPrimaryDark"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/app_name"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/txt_teacher_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ambulance_service"
            android:padding="@dimen/padding_4sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/padding_4sp"
            android:fontFamily="@font/proximanovaregular"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_marginStart="@dimen/padding_8dp"
            />
        <TextView
            android:id="@+id/txt_teacher_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sai_ambulance_service_moradabad"
            android:padding="@dimen/padding_4sp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:fontFamily="@font/proximanovaregular"
            android:layout_below="@+id/txt_teacher_name"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_marginStart="@dimen/padding_8dp"
            />
        <TextView
            android:id="@+id/txt_teacher_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sai_ambulance_service_moradabad"
            android:padding="@dimen/padding_4sp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:fontFamily="@font/proximanovaregular"
            android:layout_below="@+id/txt_teacher_class"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_marginStart="@dimen/padding_8dp"
            />



        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_delete"
            android:paddingTop="@dimen/padding_4sp"
            android:paddingBottom="@dimen/padding_4sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:layout_marginRight="@dimen/padding_8dp"
            android:background="@drawable/orange_border"
            android:fontFamily="@font/proximanovaregular"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txt_teacher_class"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/padding_8dp" />


    </RelativeLayout>



</androidx.cardview.widget.CardView>