<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/padding_8dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/padding_4sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@mipmap/edit_post"
            android:padding="@dimen/padding_4sp"
            android:tint="@color/colorPrimaryDark"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/app_name"
            android:layout_alignParentRight="true" />
        <ImageView
            android:id="@+id/post_image"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/sky"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txt_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ambulance_service"
            android:padding="@dimen/padding_4sp"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/padding_4sp"
            android:fontFamily="@font/proximanovaregular"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_toRightOf="@+id/post_image"
            android:layout_marginStart="@dimen/padding_8dp"
            android:layout_toEndOf="@+id/post_image" />
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sai_ambulance_service_moradabad"
            android:padding="@dimen/padding_4sp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:textSize="17sp"
            android:fontFamily="@font/proximanovaregular"
            android:layout_below="@+id/txt_category_name"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_toRightOf="@+id/post_image"
            android:layout_marginStart="@dimen/padding_8dp"
            android:layout_toEndOf="@+id/post_image" />

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_title"
            android:drawablePadding="@dimen/padding_8dp"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_toRightOf="@+id/post_image"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/padding_8dp"
            android:layout_toEndOf="@+id/post_image">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_location"
                android:padding="@dimen/padding_8dp"
                android:contentDescription="@string/app_name" />
            <TextView
                android:id="@+id/txt_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/moradabad"
                android:padding="@dimen/padding_4sp"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/proximanovaregular" />

            <TextView
                android:id="@+id/txt_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_4sp"
                android:paddingBottom="@dimen/padding_4sp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:layout_marginRight="@dimen/padding_8dp"
                android:layout_marginTop="@dimen/padding_4sp"
                android:background="@drawable/orange_border"
                android:fontFamily="@font/proximanovaregular"
                android:layout_marginEnd="@dimen/padding_8dp" />
        </LinearLayout>
        <TextView
            android:id="@+id/txt_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_on_call"
            android:padding="@dimen/padding_4sp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="@font/proximanovaregular"
            android:layout_below="@+id/ll_location"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_toRightOf="@+id/post_image"
            android:layout_marginStart="@dimen/padding_8dp"
            android:layout_toEndOf="@+id/post_image" />

        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_delete"
            android:paddingTop="@dimen/padding_4sp"
            android:paddingBottom="@dimen/padding_4sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:layout_marginRight="@dimen/padding_8dp"
            android:layout_marginTop="@dimen/padding_4sp"
            android:background="@drawable/orange_border"
            android:fontFamily="@font/proximanovaregular"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/ll_location"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/padding_8dp" />


    </RelativeLayout>



</androidx.cardview.widget.CardView>